# outfits-garderobe

./: .env.example  .gitignore  CLAUDE.md  Procfile  manage.py  nixpacks.toml  pyproject.toml  railway.toml
.claude/: .10x-cli-manifest.json
context/changes/bootstrap-verification/: verification.md
context/changes/deployment/: deployment-plan.md
context/foundation/: infrastructure.md  prd.md  shape-notes.md  tech-stack.md
outfits_garderobe/: asgi.py  settings.py  urls.py  wsgi.py
