[project]
name = "outfits-garderobe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.15",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "outfits_garderobe.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
